--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
            <div class="grid2">
             <div class="col2 texto">
                 <ul>
-                    <li><b>Dirección: </b>C/ My house Nº1 2ºA</li>
-                    <li><b>Teléfono: </b>612 345 678</li>
+                    <li><b>Address: </b>C/ My house Nº1 2ºA</li>
+                    <li><b>Phone: </b>612 345 678</li>
                     <li><b>e-mail: </b>cats@paradise.com</li>
                     <li><b>website: </b><a href="#">www.catsparadise.com</a></li>
                 </ul>
